fix #92, added javadoc, added method to event that allows to parse data using GeneticMapper